--- a/templates/qbittorrent/qBittorrent.conf
+++ b/templates/qbittorrent/qBittorrent.conf
@@ -37,7 +37,7 @@ MailNotification\enabled=false
 MailNotification\username={{ smtp_username }}
 MailNotification\password={{ smtp_password }}
 MailNotification\req_auth=true
-MailNotification\req_ssl=true
+MailNotification\req_ssl={{ (smtp_secure != '') | string | lower }}
 MailNotification\sender={{ smtp_sender }}
 MailNotification\smtp_server={{ smtp_host }}
 Queueing\MaxActiveDownloads=5
