--- a/tasks/duplicati.yml
+++ b/tasks/duplicati.yml
@@ -25,7 +25,7 @@
     volumes:
       - "{{ duplicati_data_directory }}:/config:rw"
       - "{{ duplicati_data_directory }}/40-custom_config:/etc/cont-init.d/40-custom_config:ro"
-      - "{{ samba_shares_root }}:/source/shares:ro"
+      - "{{ samba_shares_root }}:/source/shares:rw"
       - "{{ docker_home }}:/source/docker:ro"
       - "/etc/timezone:/etc/timezone:ro"
     restart_policy: unless-stopped
