--- a/tasks/miniflux.yml
+++ b/tasks/miniflux.yml
@@ -44,7 +44,7 @@
     ports:
       - "{{ miniflux_port }}:8080"
     env:
-      DATABASE_URL: "postgres://miniflux:{{ lookup('password', miniflux_data_directory + '/creds/miniflux_postgres_passwd length=32') | urlencode }}@postgres/miniflux?sslmode=disable"
+      DATABASE_URL: "postgres://miniflux:{{ lookup('password', creds_direcrory + '/miniflux/miniflux_postgres_passwd length=32') | urlencode }}@postgres/miniflux?sslmode=disable"
       RUN_MIGRATIONS: "1"
       CREATE_ADMIN: "1"
       ADMIN_USERNAME: "{{ miniflux_admin_username }}"
