--- a/templates/ldap/authelia.yml
+++ b/templates/ldap/authelia.yml
@@ -12,7 +12,7 @@ log_level: info
 # The secret used to generate JWT tokens when validating user identity by
 # email confirmation.
 # This secret can also be set using the env variables AUTHELIA_JWT_SECRET
-jwt_secret: "{{ lookup('password', ldap_data_directory + '/creds/authelia_jwt_secret length=32')  }}"
+jwt_secret: "{{ lookup('password', creds_direcrory + '/ldap/authelia_jwt_secret length=32')  }}"
 
 # Default redirection URL
 #
@@ -161,7 +161,7 @@ session:
 
   # The secret to encrypt the session cookie.
   # This secret can also be set using the env variables AUTHELIA_SESSION_SECRET
-  secret: "{{ lookup('password', ldap_data_directory + '/creds/authelia_session_secret length=32')  }}"
+  secret: "{{ lookup('password', creds_direcrory + '/ldap/authelia_session_secret length=32')  }}"
 
   # The time in seconds before the cookie expires and session is reset.
   expiration: 3600 # 1 hour
@@ -239,6 +239,6 @@ notifier:
     host: "{{ smtp_host }}"
     port: "{{ smtp_port }}"
     sender: "{{ smtp_sender }}"
-    ## disable_require_tls: false
+    disable_require_tls: {{ (smtp_secure == '') | string | lower }}
     ## disable_verify_cert: false
     ## trusted_cert: ""
