Exclude critical services (home automation) from auto-update

--- a/tasks/homeassistant.yml
+++ b/tasks/homeassistant.yml
@@ -40,4 +40,5 @@
       traefik.http.services.homeassistant-svc.loadbalancer.server.port: "8123"
       traefik.http.routers.homeassistant.rule: "Host(`hass.{{ ansible_nas_domain }}`)"
       traefik.http.routers.homeassistant.tls: "true"
+      com.centurylinklabs.watchtower.enable: "false"
     memory: 1g
