--- a/tasks/mosquitto.yml
+++ b/tasks/mosquitto.yml
@@ -23,6 +23,8 @@
     name: mosquitto
     image: eclipse-mosquitto:latest
     pull: true
+    labels:
+      com.centurylinklabs.watchtower.enable: "false"
     networks:
       - name: mosquitto
     volumes:
