--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -586,10 +586,13 @@ stat_collection_interval: 15s
 grafana_influxdb_port: "8086"
 grafana_port: "3000"
 # UPS monitoring
-stat_ups_nut_collection_interval: "25" # in seconds
 stat_ups_nut_enabled: false
+stat_ups_nut_database_name: nutupstest
+stat_ups_nut_collection_interval: "21" # in seconds
 stat_ups_nut_host: "host.docker.internal"
 stat_ups_nut_ups_name: netups
+# Traefik monitoring
+stat_traefik_push_interval: "10s"
 
 ###
 ### Gitea
