Add optional traefik access logs

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -113,6 +113,8 @@ traefik_enabled: false
 traefik_port_http: "80"
 traefik_port_https: "443"
 traefik_port_ui: "8083"
+traefik_access_logs_enabled: false
+
 ###
 ### General
 ###
