--- a/tasks/organizr.yml
+++ b/tasks/organizr.yml
@@ -12,6 +12,12 @@
     name: organizr
     image: organizrtools/organizr-v2:latest
     pull: true
+    etc_hosts:
+      host.docker.internal: "{{ host_docker_internal_ip }}"
+    purge_networks: true
+    networks:
+      - name: web
+      - name: ldap
     volumes:
       - "{{ organizr_data_directory }}:/config:rw"
     env:
@@ -27,4 +33,5 @@
       traefik.enable: "{{ organizr_available_externally }}"
       traefik.http.services.organizr-svc.loadbalancer.server.port: "80"
       traefik.http.routers.organizr.rule: "Host(`organizr.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.organizr.middlewares: "{% if ldap_enabled|default(false)|bool %}auth-sso{% endif %}"
       traefik.http.routers.organizr.tls: "true"
