--- a/tasks/traefik.yml
+++ b/tasks/traefik.yml
@@ -75,6 +75,8 @@
     etc_hosts:
       host.docker.internal: "{{ host_docker_internal_ip }}"
     labels:
+      com.centurylinklabs.watchtower.enable: "false"
+
       traefik.enable: "true"
       traefik.http.routers.api.rule: "Host(`traefik.{{ ansible_nas_domain }}`)"
       traefik.http.routers.api.service: "api@internal"
