Remove LDAP Self Service toolbox because it duplicates functionality of Password Reset feature of Authelia

--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -379,6 +379,7 @@ postgres_docker_image: postgres:12.0
 postgres_data_directory: "{{ docker_home }}/postgres"
 postgres_user: pguser
 postgres_password: "{{ lookup('password', creds_direcrory +'/postgres/pguser_password length=20') }}"
+postgres_backup_databases: [] # database names which should be backed-up daily
 
 ###
 ### Organizr
