--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -357,7 +357,7 @@ samba_netbios_name: "{{ ansible_nas_hostname }}"
 ###
 ### Traefik
 ###
-traefik_docker_image: traefik:v2.2
+traefik_docker_image: traefik
 traefik_data_directory: "{{ docker_home }}/traefik"
 traefik_log_level: "INFO"
 traefik_acme_staging: false
