Add host address to heimdall

--- a/tasks/heimdall.yml
+++ b/tasks/heimdall.yml
@@ -40,6 +40,8 @@
     pull: true
     volumes:
       - "{{ heimdall_data_directory }}:/config:rw"
+    etc_hosts:
+      host.docker.internal: "{{ host_docker_internal_ip }}"
     env:
       PUID: "1310"
       PGID: "1310"
