--- a/nas.yml
+++ b/nas.yml
@@ -64,6 +64,10 @@
       when: (plex_enabled | default(False))
       tags: plex
 
+    - import_tasks: tasks/openspeedtest.yml
+      when: (openspeedtest_enabled | default(False))
+      tags: openspeedtest
+
     - import_tasks: tasks/firefly.yml
       when: (firefly_enabled | default(False))
       tags: firefly
