--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -424,6 +424,7 @@ joomla_data_directory: "{{ docker_home }}/joomla"
 joomla_available_externally: "false"
 joomla_database_password: top_secret
 joomla_port: "8181"
+joomla_domain: "joomla.{{ ansible_nas_domain }}"
 
 ###
 ### pyLoad
