--- a/tasks/bitwarden.yml
+++ b/tasks/bitwarden.yml
@@ -25,9 +25,18 @@
       WEBSOCKET_ENABLED: "true"
     labels:
       traefik.enable: "{{ bitwarden_available_externally }}"
-      traefik.http.services.bitwarden-svc.loadbalancer.server.port: "80"
-      traefik.http.routers.bitwarden.rule: "Host(`bitwarden.{{ ansible_nas_domain }}`)"
-      traefik.http.routers.bitwarden.tls: "true"
+
+      traefik.http.services.bitwarden-web-svc.loadbalancer.server.port: "80"
+      traefik.http.routers.bitwarden-web.rule: "Host(`bitwarden.{{ ansible_nas_domain }}`)"
+      traefik.http.routers.bitwarden-web.tls: "true"
+      traefik.http.routers.bitwarden-web.service: bitwarden-web-svc
+
+      traefik.http.services.bitwarden-ws-svc.loadbalancer.server.port: "3012"
+      traefik.http.routers.bitwarden-ws.rule: "Host(`bitwarden.{{ ansible_nas_domain }}`) && Path(`/notifications/hub`)"
+      traefik.http.routers.bitwarden-ws.tls: "true"
+      traefik.http.routers.bitwarden-ws.middlewares: bitwarden-ws-strip
+      traefik.http.routers.bitwarden-ws.service: bitwarden-ws-svc
+      traefik.http.middlewares.bitwarden-ws-strip.stripprefix.prefixes: /notifications/hub
     restart_policy: unless-stopped
     #memory: 1g
 
